--- a/test.html
+++ b/test.html
@@ -8,8 +8,7 @@
     <p><b>Cause it's time to learn Github</b></p><br>
     <p>And here's a cute cat:</p>
     <img src="kitten.jpg"><br>
-    <p>And here's where to find more cute cats: </p>
-    <a href="https://www.google.com/search?q=cat&tbm=isch&tbs=isz:m&rlz=1C1YTUH_enUS1015US1015&hl=en&sa=X&ved=0CAMQpwVqFwoTCKjPrb_tnoMDFQAAAAAdAAAAABAC&biw=1519&bih=730"
+    <p>And here's where to find more cute cats: </p> <a href="https://www.google.com/search?q=cat&tbm=isch&tbs=isz:m&rlz=1C1YTUH_enUS1015US1015&hl=en&sa=X&ved=0CAMQpwVqFwoTCKjPrb_tnoMDFQAAAAAdAAAAABAC&biw=1519&bih=730"
         target="_blank" title="Cute Kitties">Click for cats!</a>
 </body>
 </html>
